dolphinview: add error message when renaming failed in dialog mode

BUG: 481561